--- a/options.html
+++ b/options.html
@@ -15,13 +15,13 @@
       <div class="form-group">
         <label for="ipv4-target">IPv4 Target</label>
         <input type="text" id="ipv4-target" placeholder="8.8.8.8">
-        <p class="help-text">Default: Google DNS (8.8.8.8). Other options: Cloudflare (1.1.1.1), Quad9 (9.9.9.9)</p>
+        <p class="help-text">Default: Google DNS (8.8.8.8). Any IP with port 443 open will work.</p>
       </div>
       
       <div class="form-group">
         <label for="ipv6-target">IPv6 Target</label>
         <input type="text" id="ipv6-target" placeholder="2001:4860:4860::8888">
-        <p class="help-text">Default: Google DNS (2001:4860:4860::8888). Other options: Cloudflare (2606:4700:4700::1111)</p>
+        <p class="help-text">Default: Google DNS (2001:4860:4860::8888). Any IP with port 443 open will work.</p>
       </div>
       
       <div class="form-group">
