Add DNS resolution checks with configurable FQDN and DoH server
- Add DNS test domain (FQDN) and DNS-over-HTTPS server settings
- Query A (IPv4) and AAAA (IPv6) records
- Compare system DNS (Google) vs configurable DoH server
- Display results in popup with latency measurements
- Support Cloudflare, Google, Quad9, and OpenDNS DoH servers

--- a/popup.html
+++ b/popup.html
@@ -64,6 +64,38 @@
       </div>
     </div>
     
+    <div class="ip-section dns-section">
+      <h2>DNS Resolution <span class="dns-fqdn" id="dns-fqdn-display"></span></h2>
+      <div class="dns-comparison">
+        <div class="dns-column">
+          <div class="dns-header">System (Google)</div>
+          <div class="dns-row">
+            <span class="dns-label">A:</span>
+            <span class="dns-value" id="dns-system-a">-</span>
+            <span class="dns-latency" id="dns-system-a-latency"></span>
+          </div>
+          <div class="dns-row">
+            <span class="dns-label">AAAA:</span>
+            <span class="dns-value" id="dns-system-aaaa">-</span>
+            <span class="dns-latency" id="dns-system-aaaa-latency"></span>
+          </div>
+        </div>
+        <div class="dns-column">
+          <div class="dns-header" id="dns-doh-header">Custom DoH</div>
+          <div class="dns-row">
+            <span class="dns-label">A:</span>
+            <span class="dns-value" id="dns-doh-a">-</span>
+            <span class="dns-latency" id="dns-doh-a-latency"></span>
+          </div>
+          <div class="dns-row">
+            <span class="dns-label">AAAA:</span>
+            <span class="dns-value" id="dns-doh-aaaa">-</span>
+            <span class="dns-latency" id="dns-doh-aaaa-latency"></span>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="footer">
       <div class="last-check" id="last-check">Last check: -</div>
       <button id="check-now" class="btn btn-primary">Check Now</button>
