--- a/popup.html
+++ b/popup.html
@@ -65,35 +65,14 @@
     </div>
     
     <div class="ip-section dns-section">
-      <h2>DNS Resolution <span class="dns-fqdn" id="dns-fqdn-display"></span></h2>
-      <div class="dns-comparison">
-        <div class="dns-column">
-          <div class="dns-header">System (Google)</div>
-          <div class="dns-row">
-            <span class="dns-label">A:</span>
-            <span class="dns-value" id="dns-system-a">-</span>
-            <span class="dns-latency" id="dns-system-a-latency"></span>
-          </div>
-          <div class="dns-row">
-            <span class="dns-label">AAAA:</span>
-            <span class="dns-value" id="dns-system-aaaa">-</span>
-            <span class="dns-latency" id="dns-system-aaaa-latency"></span>
-          </div>
-        </div>
-        <div class="dns-column">
-          <div class="dns-header" id="dns-doh-header">Custom DoH</div>
-          <div class="dns-row">
-            <span class="dns-label">A:</span>
-            <span class="dns-value" id="dns-doh-a">-</span>
-            <span class="dns-latency" id="dns-doh-a-latency"></span>
-          </div>
-          <div class="dns-row">
-            <span class="dns-label">AAAA:</span>
-            <span class="dns-value" id="dns-doh-aaaa">-</span>
-            <span class="dns-latency" id="dns-doh-aaaa-latency"></span>
-          </div>
-        </div>
+      <h2>DNS Resolution</h2>
+      <div class="dns-status-row">
+        <span class="dns-test-label">System DNS:</span>
+        <span class="dns-test-fqdn" id="dns-fqdn-display">-</span>
+        <span class="dns-test-result" id="dns-result">-</span>
+        <span class="dns-test-latency" id="dns-latency"></span>
       </div>
+      <p class="dns-help">If IPv4/IPv6 work but DNS fails → local DNS is broken</p>
     </div>
     
     <div class="footer">
