Replace latency with rating system
Rating based on response time:
- Excellent: < 150ms
- Good: 150-300ms
- Fair: 300-500ms
- Poor: > 500ms

More meaningful than raw ms values that include TLS overhead.

--- a/popup.html
+++ b/popup.html
@@ -42,7 +42,7 @@
           </div>
           <div class="status-details">
             <div class="target" id="ipv4-target">-</div>
-            <div class="latency" id="ipv4-latency">-</div>
+            <div class="rating" id="ipv4-rating">-</div>
           </div>
         </div>
         
@@ -53,7 +53,7 @@
           </div>
           <div class="status-details">
             <div class="target" id="ipv6-target">-</div>
-            <div class="latency" id="ipv6-latency">-</div>
+            <div class="rating" id="ipv6-rating">-</div>
           </div>
         </div>
       </div>
