--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="header">
       <div class="header-text">
-        <h1>IP What</h1>
+        <h1>IP What?</h1>
         <p class="subtitle">IPv4/IPv6 Connectivity Status</p>
       </div>
       <button id="open-settings" class="btn-icon" title="Settings">⚙️</button>
