Change labels to 'IPv4 Reachability' and 'IPv6 Reachability'

--- a/popup.html
+++ b/popup.html
@@ -37,7 +37,7 @@
       <div class="status-cards">
         <div class="status-card" id="ipv4-card">
           <div class="status-header">
-            <span class="protocol">IPv4 Reachable</span>
+            <span class="protocol">IPv4 Reachability</span>
             <span class="status-indicator" id="ipv4-indicator"></span>
           </div>
           <div class="status-details">
@@ -47,7 +47,7 @@
         
         <div class="status-card" id="ipv6-card">
           <div class="status-header">
-            <span class="protocol">IPv6 Reachable</span>
+            <span class="protocol">IPv6 Reachability</span>
             <span class="status-indicator" id="ipv6-indicator"></span>
           </div>
           <div class="status-details">
