Add resolved IP display using webRequest API (v1.6.0)
- Add webRequest permission to capture IP addresses Chrome connects to
- Display resolved IPs in status cards (IPv4, IPv6, DNS)
- Show arrow notation (→ IP) below target hostnames
- Click-to-copy functionality for resolved IPs
- Version bump to 1.6.0

--- a/popup.html
+++ b/popup.html
@@ -42,6 +42,7 @@
           </div>
           <div class="status-details">
             <div class="target" id="ipv4-target">-</div>
+            <div class="resolved-ip" id="ipv4-resolved"></div>
           </div>
         </div>
         
@@ -52,6 +53,7 @@
           </div>
           <div class="status-details">
             <div class="target" id="ipv6-target">-</div>
+            <div class="resolved-ip" id="ipv6-resolved"></div>
           </div>
         </div>
       </div>
@@ -63,6 +65,7 @@
         </div>
         <div class="status-details">
           <div class="target" id="dns-fqdn-display">-</div>
+          <div class="resolved-ip" id="dns-resolved"></div>
         </div>
       </div>
       
