Add .github to gitignore and update files

--- a/popup.html
+++ b/popup.html
@@ -56,16 +56,21 @@
         </div>
       </div>
       
+      <!-- DNS Resolution card hidden - not useful with proxies like Zscaler -->
+      <!--
       <div class="status-card full-width" id="dns-card">
         <div class="status-header">
           <span class="protocol">DNS Resolution</span>
           <span class="status-indicator" id="dns-indicator"></span>
         </div>
         <div class="status-details">
-          <div class="target" id="dns-fqdn-display">-</div>
-          <div class="resolved-ip" id="dns-resolved"></div>
+          <div class="dns-line">
+            <span class="target" id="dns-fqdn-display">-</span>
+            <span class="resolved-ip" id="dns-resolved"></span>
+          </div>
         </div>
       </div>
+      -->
       
       <div class="ip-section">
         <h2>Local IP</h2>
