Add dark mode support, energy drink donation button, smooth jitter EMA

--- a/popup.html
+++ b/popup.html
@@ -202,28 +202,20 @@
         <p class="about-desc">A simple tool to check your IPv4 and IPv6 connectivity status, with history tracking and notifications.</p>
       </div>
       
-      <div class="about-section">
-        <h3>Settings</h3>
-        <div class="about-info">
-          <div class="about-row">
-            <span class="about-label">Check Interval</span>
-            <span class="about-value" id="about-check-interval">-</span>
-          </div>
-          <div class="about-row">
-            <span class="about-label">IPv4 Target</span>
-            <span class="about-value" id="about-ipv4-target">-</span>
-          </div>
-          <div class="about-row">
-            <span class="about-label">IPv6 Target</span>
-            <span class="about-value" id="about-ipv6-target">-</span>
-          </div>
-        </div>
+      <div class="about-section support-section">
+        <h3>⚡ Support Development</h3>
+        <p class="support-desc">If IP What has been useful to you, consider buying me an energy drink to fuel future updates!</p>
+        <a href="https://ko-fi.com/krich11" target="_blank" class="btn btn-energy">
+          🥤 Buy me an Energy Drink!
+        </a>
       </div>
       
       <div class="about-section">
         <h3>Links</h3>
         <div class="about-links">
           <a href="#" id="open-settings-about" class="about-link">⚙️ Open Settings</a>
+          <a href="https://github.com/krich11/ipwhat" target="_blank" class="about-link">📦 GitHub Repo</a>
+          <a href="https://github.com/krich11/ipwhat/issues" target="_blank" class="about-link">🐛 Report an Issue</a>
         </div>
       </div>
     </div>
