--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>IP What</title>
+  <title>IP What?</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -195,7 +195,7 @@
         <div class="about-header">
           <span class="about-icon">🌐</span>
           <div class="about-title">
-            <h2>IP What</h2>
+            <h2>IP What?</h2>
             <span class="about-version" id="extension-version">-</span>
           </div>
         </div>
@@ -204,7 +204,7 @@
       
       <div class="about-section support-section">
         <h3>⚡ Support Development</h3>
-        <p class="support-desc">If IP What has been useful to you, consider buying me an energy drink to fuel future updates!</p>
+        <p class="support-desc">If <strong>IP What?</strong> has been useful to you, consider buying me an energy drink to fuel future updates!</p>
         <a href="https://ko-fi.com/krich11" target="_blank" class="btn btn-energy">
           🥤 Buy me an Energy Drink!
         </a>
