Fix IPv6 reachability check - use direct HTTP to IP literals
- Change connectivity check to use actual configured IP address over HTTP
- Add Cloudflare HTTP permissions (1.1.1.1, 2606:4700:4700::1111)
- Default targets now Cloudflare (serves HTTP on port 80)
- Eliminates DNS dependency for connectivity checks
- Fixes false negatives when IPv6 is actually working

Bump to v1.6.2

--- a/options.html
+++ b/options.html
@@ -29,17 +29,17 @@
         <div class="field-row">
           <div class="field">
             <label for="ipv4-target">IPv4</label>
-            <input type="text" id="ipv4-target" placeholder="8.8.8.8">
+            <input type="text" id="ipv4-target" placeholder="1.1.1.1">
           </div>
           <div class="field">
             <label for="ipv6-target">IPv6</label>
-            <input type="text" id="ipv6-target" placeholder="2001:4860:4860::8888">
+            <input type="text" id="ipv6-target" placeholder="2606:4700:4700::1111">
           </div>
         </div>
         
         <div class="field">
           <label for="dns-fqdn">DNS Test Domain</label>
-          <input type="text" id="dns-fqdn" placeholder="www.google.com">
+          <input type="text" id="dns-fqdn" placeholder="www.cloudflare.com">
           <span class="field-hint">Tests if hostname resolution works</span>
         </div>
       </section>
